se agrega activity game (juego) ademas de nuevo activity_final_score para la visualizacion final
Signed-off-by: Jellian <haanniiaarodriguez@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizAppPlus">
+        <activity android:name=".final_score"></activity>
+        <activity android:name=".game" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
