--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.QuizAppPlus">
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity android:name=".final_score"></activity>
         <activity android:name=".game" />
         <activity android:name=".MainActivity">
