--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".final_score"></activity>
+        <activity android:name=".Opciones"></activity>
+        <activity android:name=".final_score" />
         <activity android:name=".game" />
         <activity android:name=".MainActivity">
             <intent-filter>
