--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,14 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation 'com.facebook.stetho:stetho:1.5.1'
 
+    def lifecycle_version = "2.2.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
+
 
 }
